# ym2151-log-play-server

./: .gitignore  ALSA_CAPTURE_TDD.md  BUFFER_SIZE_INVESTIGATION.md  BUILD.md  CI_TDD_GUIDE.md  COMPARISON_SUMMARY.md  Cargo.toml  FFI_PERFORMANCE_ANALYSIS.md  FFI_PERFORMANCE_ANALYSIS_JA.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INTERACTIVE_MODE_ANALYSIS.md  INVESTIGATION_SUMMARY.md  ISSUE_5794738_SUMMARY.md  ISSUE_72_SUMMARY.md  ISSUE_86_SUMMARY.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_MONITORING.md  PLAYBACK_SPEED_INVESTIGATION.md  README.ja.md  README.md  README.md.bak  RUST_AGENTIC_CODING_BEST_PRACTICES.md  SERVER_CLIENT_PLAN.md  SUMMARY_JA.md  TEST_RESULTS.md  TIMING_DIAGRAM.md  VISUALIZATION_SUMMARY_JA.md  _config.yml  build.rs  call_opm_clock_64times.c  install-ym2151-tools.rs  opm.c  opm.h  output_pass2.json  output_ym2151.json  output_ym2151_f64seconds.json  setup_ci_environment.sh  test_alsa_capture.sh  test_alsa_tdd_example.sh  (+4 more)
.cargo/: config.toml
.config/: nextest.toml
.github/: check-large-files.toml  copilot-instructions.md  pull_request_template.md
.github/scripts/: README.md  generate_test_failure_issue.py  parse_nextest_junit.py  test_generate_test_failure_issue.py  test_parse_nextest_junit.py
.github/workflows/: alsa_capture_test.yml  build_windows.yml  call-daily-project-summary.yml  call-rust-fmt-commit.yml  call-rust-windows-cargo-check.yml
examples/: clear_schedule_demo.rs  ffi_benchmark.rs  interactive_demo.rs  play_json_interactive_demo.rs  test_client_non_verbose.rs  test_client_verbose.rs  test_logging_non_verbose.rs  test_logging_verbose.rs  verify_correctness.rs
generated-docs/: development-status-generated-prompt.md  development-status.md  project-overview-generated-prompt.md  project-overview.md
issue-notes/: 100.md  101.md  102.md  103.md  107.md  110.md  111.md  112.md  113.md  114.md  116.md  117.md  118.md  119.md  120.md  121.md  122.md  123.md  124.md  128.md  130.md  132.md  134.md  138.md  141.md  143.md  146.md  148.md  150.md  152.md  154.md  156.md  158.md  161.md  165.md  167.md  169.md  173.md  178.md  181.md  (+39 more)
src/: audio.rs  audio_config.rs  client.rs  debug_wav.rs  demo.rs  demo_client_interactive.rs  demo_server_interactive.rs  demo_server_non_interactive.rs  events.rs  lib.rs  logging.rs  main.rs  mmcss.rs  opm.rs  opm_ffi.rs  perf_monitor.rs  player.rs  resampler.rs  scheduler.rs  self_update.rs  server.rs  server_old.rs  wav_writer.rs
src/audio/: buffers.rs  commands.rs  generator.rs  mod.rs  player.rs  scheduler.rs  stream.rs
src/client/: config.rs  (+5 more)
tests/: audio_playback_test.rs  clear_schedule_test.rs  cli_integration_test.rs  client_json_test.rs  client_test.rs  client_verbose_test.rs  debug_wav_test.rs  duration_test.rs  ensure_server_ready_test.rs  events_processing_test.rs  feature_demonstration_test.rs  integration_test.rs  interactive_mode_test.rs  interactive_tests.rs  ipc_pipe_test.rs  logging_test.rs  phase3_test.rs  phase4_test.rs  phase5_test.rs  phase6_cli_test.rs  phase7_error_test.rs  phase7_integration_test.rs  play_json_interactive_test.rs  server_basic_test.rs  server_integration_test.rs  server_windows_fix_test.rs  tail_generation_test.rs  test_util_server_mutex.rs  test_utils.rs  unit_audio_tests.rs  unit_client_tests.rs  unit_debug_wav_tests.rs  unit_events_tests.rs  unit_ipc_pipe_windows_tests.rs  unit_ipc_protocol_tests.rs  unit_logging_tests.rs  unit_opm_ffi_tests.rs  unit_opm_tests.rs  unit_resampler_tests.rs  unit_scheduler_tests.rs  (+2 more)
(+47 files in other folders)
