[package]
name = "ym2151-log-player-rust"
version = "0.1.0"
edition = "2021"
authors = ["cat2151"]
license = "MIT"
description = "YM2151 Log Player - Rust implementation"

[lib]
name = "ym2151_log_player_rust"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cpal = { version = "0.15.3", optional = true }  # Pinned for reproducible audio processing
hound = "3.5"
anyhow = "1.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["fs"] }  # Unix named pipe (FIFO) creation

[features]
default = ["realtime-audio"]
realtime-audio = ["cpal"]

[build-dependencies]
cc = "1.0"

# Performance optimization profile for release builds
# These settings maximize runtime performance for audio processing
[profile.release]
lto = "fat"            # Full link-time optimization across all crates and C code
codegen-units = 1      # Single codegen unit for better optimization (slower compile, faster runtime)
