[package]
name = "ym2151-log-play-server"
version = "0.1.0"
edition = "2021"
authors = ["cat2151"]
license = "MIT"
description = "YM2151 Log Player - Rust implementation"

[lib]
name = "ym2151_log_play_server"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cpal = { version = "0.16.0", features = ["audio_thread_priority"] }  # Updated for latest audio processing features with thread priority
hound = "3.5"
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
rubato = "0.16.2"  # High-quality audio resampling library

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_System_Pipes", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_Security", "Win32_Media_Audio"] }  # Windows named pipe creation and MMCSS
which = "8.0"  # For checking if applications are in PATH

[dev-dependencies]
# Adding once_cell for test synchronization
once_cell = "1.19"

[features]
verbose_pipe_debug = []

[build-dependencies]
cc = "1.0"

# Performance optimization profile for release builds
# These settings maximize runtime performance for audio processing
[profile.release]
lto = "fat"            # Full link-time optimization across all crates and C code
codegen-units = 1      # Single codegen unit for better optimization (slower compile, faster runtime)
